# nautix

./: .gitignore  LICENSE  README.md
cpp/: .gitignore  CMakeLists.txt  README.md  _clang-format  _clang-tidy  _editorconfig  app  clang-toolchain.cmake
cpp/.github/workflows/: ci-2.yml  ci.yml  release.yml
cpp/docs/: ARCHITECTURE.md  CODE_STYLE.md  CONTRIBUTING.md  ROADMAP.md
cpp/src/: CMakeLists.txt  lixo  lixo.cpp  main.cpp  main.ui
cpp/src/adw/: CMakeLists.txt
cpp/src/adw/include/adw/: Application.h  ApplicationWindow.h  Window.h
cpp/src/adw/src/: Application.cpp  ApplicationWindow.cpp  Window.cpp
cpp/src/application/: CMakeLists.txt  application.cppm  directory_metadata.h  directory_metadata_provider.h  filesystem_provider.h  fs.cpp  fs.h  list_directories.cpp  list_directories.cppm  list_directories.h  sort_order.h
cpp/src/application/include/: DeleteItems.h  ListDirectories.h  list_directories.h
cpp/src/application/include/application/: CopyItem.h  DeleteItem.h  ListDirectories.h  MoveItem.h  RenameItem.h  SortOrder.h
cpp/src/application/include/application/ports/: IDirectoriesLister.h  IItemCopier.h  IItemDeleter.h  IItemMover.h  IItemRenamer.h  IItemsDeleter.h
cpp/src/application/include/ports/: IDirectoriesLister.h  IItemsDeleter.h
cpp/src/application/src/: CopyItem.cpp  DeleteItem.cpp  DeleteItems.cpp  ListDirectories.cpp  MoveItem.cpp  RenameItem.cpp  list_directories.cpp
cpp/src/common/: CMakeLists.txt
cpp/src/common/include/common/: Logger.h
cpp/src/common/src/: Logger.cpp
cpp/src/core/: CMakeLists.txt  errors.h  fs.cpp  fs.h  std.h  time.h
cpp/src/domain/: CMakeLists.txt  directory.cpp  directory.cppm  directory.h  directory.ixx  domain.cppm  file.cpp  file.h  local_time.cppm  local_time.h  local_time.ixx  owner.cppm  owner.h  owner.ixx
cpp/src/domain/include/domain/: directory.h  local_time.h  owner.h
cpp/src/domain/src/: directory.cpp
cpp/src/infra/: CMakeLists.txt  directories_lister.cpp  directories_lister.h  fs.cpp  fs.h  infra.cppm  linux_directories_iterator.cpp  linux_directories_iterator.cppm  system_metadata_provider.cpp  system_metadata_provider.h  time.cpp
cpp/src/infra/include/infra/: DirectoriesLister.h  DirectoryMetadata.h  ItemCopier.h  ItemDeleter.h  ItemMover.h  ItemRenamer.h  ItemsDeleter.h  errors.h  fs.h  time.h
cpp/src/infra/src/: DirectoriesLister.cpp  ItemCopier.cpp  ItemDeleter.cpp  ItemMover.cpp  ItemMover_cpp  ItemRenamer.cpp  ItemsDeleter.cpp  fs.cpp  time.cpp
cpp/src/infra/src/include/: fs.h
cpp/src/infra/src/include/ports/: directories_lister.h
cpp/src/infra/src/ports/: directories_lister.cpp  directories_lister.h
cpp/src/ui/: CMakeLists.txt  DirectoryTreeView.cpp  DirectoryTreeView.h
cpp/src/ui/include/ui/: ContentView.h  MainWindow.h  NavigationPanel.h  StatusBar.h
cpp/src/ui/src/: ContentView.cpp  MainWindow.cpp  NavigationPanel.cpp  StatusBar.cpp  ui.cpp
cpp/tests/: CMakeLists.txt
cpp/tests/application/: CopyItem.integration-test.cpp  DeleteItem.test.cpp  DeleteItems.integration-test.cpp  DeleteItems.test.cpp  DeleteItemsUseCase.test.cpp  ListDirectories.integration-test.cpp  ListDirectories.test.cpp  ListDirectoriesUseCase.test.cpp  ListItems.test.cpp  MoveItem.integration-test.cpp  MoveItems.integration-test.cpp  RenameItem.integration-test.cpp  TempDir.h  test_create_directory.cpp  test_list_directories.cpp
cpp/tests/domain/: test_directory.cpp
cpp/tests/infra/: FakeFileSystemProvider.cpp  FakeFileSystemProvider.h  mock_directories_lister.cpp  mock_directories_lister.h
cpp/tests/ui/: main_window.test.cpp  test_DirectoryTreeView.cpp
rust/: Cargo.toml
rust/src/: main.rs  person.rs
rust/src/db/: mod.rs
